<resources>
    <string name="app_name">شکن</string>
    <string name="quick_toggle">Toggle</string>
    <string name="notice_main_disconnected">You cannot access sanctioned websites and services. Press the button below to activate.</string>
    <string name="notice_main_connected">You have access to sanctioned websites and services</string>
    <string name="notice_activated">Shecan is activated.</string>
    <string name="notice_start_test">Testing specified DNS server…</string>
    <string name="notice_queries">DNS query times:</string>
    <string name="notice_legacy_api">The current Android API can not support all the features.</string>
    <string name="notice_need_restart">Re-activate Shecan to make the settings take effect.</string>
    <string name="notice_fill_in_all">Please fill in all configuration items.</string>
    <string name="notice_delete_confirm_prompt">Are you sure you want to remove this configuration?</string>
    <string name="notice_export_complete">Export completed.</string>
    <string name="logo_text">shecan</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_dns_test">Test DNS</string>
    <string name="action_start_test">Start test</string>
    <string name="action_home">Home</string>
    <string name="action_rules">Rules</string>
    <string name="action_dns_servers">Servers</string>
    <string name="action_removed">Removed.</string>
    <string name="action_undo">Undo</string>
    <string name="action_log">Log</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reload">Reload</string>
    <string name="delete">Delete</string>
    <string name="apply">Apply</string>
    <string name="export">Export</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="button_text_activate">Activate</string>
    <string name="button_text_deactivate">Deactivate</string>
    <string name="config_dns_server">DNS server config</string>
    <string name="config_rule">Rule config</string>
    <string name="settings_system">System Settings</string>
    <string name="settings_boot">Auto activate on boot</string>
    <string name="settings_server">Server Settings</string>
    <string name="settings_notification">Show notification</string>
    <string name="settings_dns_test_servers">DNS test servers</string>
    <string name="settings_advanced">Advanced System Settings</string>
    <string name="settings_advanced_on">On</string>
    <string name="settings_dns_over_tcp">DNS over TCP</string>
    <string name="settings_log_size">Log size limit</string>
    <string name="settings_debug_output">Debug output</string>
    <string name="settings_server_name">Server Name</string>
    <string name="settings_server_address">Server Address</string>
    <string name="settings_server_port">Server Port</string>
    <string name="server_shecan_primary">Shecan</string>
    <string name="server_shecan_secondary">Standard Shecan</string>
    <string name="server_shecan_pro_primary">Pro</string>
    <string name="server_shecan_pro_secondary">Standard Pro</string>
    <string name="primary_server">Primary DNS server</string>
    <string name="secondary_server">Secondary DNS server</string>
    <string name="test_domain">Test domain:</string>
    <string name="test_time_used">Time used:</string>
    <string name="test_dns_server">DNS server:</string>
    <string name="test_result_resolved">Address:</string>
    <string name="test_failed">DNS query failed. Timeout or unknown hostname.</string>
    <string name="test_test_domain">check.shecan.ir</string>
    <string name="nav_version">Version:</string>
    <string name="settings_language">Language</string>
    <string name="notification_channel_default">اعلان‌های شکن</string>
    <string name="notification_channel_default_description">اعلان‌های وضعیت و کنترل شکن.</string>
    <string name="notification_channel_hiddenicon">اعلان کم‌صدا</string>
    <string name="notification_channel_hiddenicon_description">اعلان‌های کم‌صدای شکن.</string>
    <string name="monitoring_notification_channel">کنترل شکن</string>
    <string name="monitoring_notification_channel_description">دسترسی سریع برای روشن و خاموش کردن شکن.</string>
    <string name="monitoring_notification_active_text">شکن روشن است و آماده استفاده است.</string>
    <string name="monitoring_notification_inactive_text">برای شروع، شکن را روشن کنید.</string>
    <string name="notification_active_title">شکن روشن است</string>
    <string name="notification_inactive_title">شکن خاموش است</string>
    <string name="notification_connecting_title">شکن در حال اتصال است</string>
    <string name="notification_active_subtitle">دسترسی امن و سریع برقرار است</string>
    <string name="notification_inactive_subtitle">برای شروع، شکن را روشن کنید</string>
    <string name="notification_connecting_subtitle">در حال ثبت IP و بررسی اتصال…</string>
    <string name="notification_status_connected">متصل</string>
    <string name="notification_status_ready">آماده اتصال</string>
    <string name="notification_turn_on">روشن کردن شکن</string>
    <string name="notification_turn_off">خاموش کردن شکن</string>
    <string name="notification_turn_on_short">روشن کن</string>
    <string name="notification_turn_off_short">خاموش کن</string>
    <string name="notification_selected_service">سرویس انتخابی</string>
    <string name="notification_logo_description">نشان شکن</string>
    <string name="about_us_text">سامانه «شکن» یک تحریم‌شکن ایرانی و قانونی است که امکان دسترسی به سایت‌های تحریم‌شده را بدون نیاز به ابزارهای ناقض حریم خصوصی و امنیت مانند فیلترشکن، وی‌پی‌ان و پراکسی به آسانی و برای استفاده شخصی به رایگان فراهم می‌کند.</string>
    <string name="website_link"><a href="https://shecan.ir/">shecan.ir</a></string>
    <string name="telegram_link"><a href="https://t.me/shecan_ir">@shecan_ir</a></string>
    <string name="email_link"><a href="mailto:info@shecan.ir">info@shecan.ir</a></string>
    <string name="github_link"><a href="https://github.com/shecanir/shecan-android">shecanir/shecan-android</a></string>
    <string name="saramad_url">http://logo.saramad.ir/verify.aspx?CodeShamad=1-2-691804-63-0-3</string>
    <string name="shecan_logo_description">Shecan Logo</string>
    <string name="saramad_logo_description">Saramad Logo</string>
    <string name="ic_bonyan_logo">\ue809</string>
    <string name="bonyan_url">https://bonyan.co</string>
    <string name="shecan_status_active">shecan is active</string>
    <string name="shecan_status_pro_static_active">shecan is active with static IP</string>
    <string name="shecan_status_pro_dynamic_active">shecan is active with dynamic IP</string>
    <string name="shecan_status_deactive">shecan is not active</string>
    <string name="dynamic_ip_connection_not_ready">Connection is not ready yet. Please try again in a moment.</string>
    <string name="connection_error_no_internet">No internet connection. Check your network and try again.</string>
    <string name="connection_error_timeout">The connection request timed out. Try again or switch networks.</string>
    <string name="connection_error_dns_lookup">The connection server could not be found. Check your network or switch networks.</string>
    <string name="connection_error_secure_connection">A secure connection to the server could not be established.</string>
    <string name="connection_error_server">The connection server encountered an error. Please try again shortly.</string>
    <string name="connection_error_too_many_requests">Too many connection attempts were made. Please wait a moment and try again.</string>
    <string name="connection_error_config_invalid">The saved service configuration is not valid. Select the service again and retry.</string>
    <string name="connection_error_activation_denied">The server did not allow this service to be activated. Select the service again and retry.</string>
    <string name="connection_error_request_rejected">The connection request was rejected (response code: %1$d).</string>
    <string name="connection_error_invalid_response">The connection server returned an invalid response.</string>
    <string name="connection_error_dns_unreachable">The Shecan DNS servers are not reachable on this network. Try another network.</string>
    <string name="connection_error_vpn_permission_denied">VPN permission was not granted.</string>
    <string name="connection_error_vpn_not_supported">This device does not support the built-in VPN service.</string>
    <string name="connection_error_vpn_start_failed">The VPN service could not be started.</string>
    <string name="connection_error_vpn_interface_failed">The VPN connection could not be created on this device.</string>
    <string name="connection_error_verification_failed">The connection was created, but could not be verified. Try another network.</string>
    <string name="connection_error_generic">An error occurred. Please try again.</string>
    <string name="login_error_invalid_credentials">The phone number, email, or password is incorrect.</string>
    <string name="login_error_generic">Login failed. Please try again.</string>
    <string name="donate">Shecan</string>
    <string name="donate_icon">Donate Icon</string>
    <string name="logo_image">Logo Image</string>
    <string name="check_and_report">Check and Report</string>
    <string name="status_icon">Status Icon</string>
    <string name="free_shecan">Free Shecan</string>
    <string name="pro_shecan">Pro Shecan</string>
    <string name="dynamic_ip">Dynamic IP</string>
    <string name="static_ip">Static IP</string>
    <string name="please_enter_your_link_updater">Please Enter Your Link Updater</string>
    <string name="help">Help</string>
    <string name="no_active_service">The Updater Link is not valid or You don\'t have active service</string>
    <string name="purchase_service">Purchase/Renewal Service</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="cancel2">Cancel</string>
    <string name="new_version_available">A new version of the app is available</string>
    <string name="site_update_dialog_description">Download the latest Site version directly and install it from inside the app.</string>
    <string name="site_update_url_missing">Update download link is not configured yet.</string>
    <string name="site_update_download_started">Downloading update...</string>
    <string name="site_update_download_failed">Update download failed.</string>
    <string name="site_update_install_permission_required">Allow installing updates from this app, then tap Update again.</string>
    <string name="site_update_downloading_percent">Downloading update... %1$d%%</string>
    <string name="site_update_install_ready">Update downloaded. Starting installer...</string>
    <string name="site_update_install">Install</string>
    <string name="out_of_range_ip_error">Your IP is not on the list of IPs introduced to Shekan!</string>
    <string name="contact_support">Contact Support</string>
    <string name="free">رایگان</string>
    <string name="sendAgain">ارسال مجدد</string>
    <string name="confirm">تأیید</string>
    <string name="loginWithOtp">ورود با رمز یکبار مصرف</string>
    <string name="inputOtpCode">لطفا رمز پیامک شده را وارد کنید</string>
    <string name="exit_sheet_title">خروج از برنامه</string>
    <string name="exit_sheet_message">می‌خوای خارج شی یا قبلش به ما امتیاز بدی؟</string>
    <string name="rate_app_button">⭐ نظر دادن به برنامه</string>
    <string name="exit_button_short">خروج</string>
    <string name="rate_dialog_title">نظرت درباره شکن چیه؟</string>
    <string name="rate_dialog_message">امتیازت کمک می‌کنه بهترش کنیم 🙏</string>
    <string name="later">بعداً</string>
    <string name="submit_rating">ثبت امتیاز</string>
</resources>