<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_dns_test"
            android:checked="false"
            android:icon="@drawable/ic_verified_user"
            android:title="@string/action_dns_test" />
    </group>

    <group
        android:id="@+id/nav_group_more"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_assignment"
            android:title="@string/action_log"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/action_about" />
    </group>
</menu>
