<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView_about"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/fragment_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/about_logo_size"
            android:layout_height="@dimen/about_logo_size"
            android:src="@drawable/logo"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/shecan_logo_description" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textSize="20sp"
            android:text="@string/about_us_text"/>

        <ImageView
            android:id="@+id/saramad_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/saramad"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/saramad_logo_description" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:layout_marginLeft="40dp"
            tools:ignore="RtlHardcoded">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layoutDirection="ltr"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="@dimen/contact_icon_size"
                    android:layout_height="@dimen/contact_icon_size"
                    android:src="@drawable/ic_website"
                    android:tint="?colorIcons"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/website_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website_link"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layoutDirection="ltr"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="@dimen/contact_icon_size"
                    android:layout_height="@dimen/contact_icon_size"
                    android:src="@drawable/ic_telegram"
                    android:tint="?colorIcons"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:id="@+id/telegram_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telegram_link"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layoutDirection="ltr"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="@dimen/contact_icon_size"
                    android:layout_height="@dimen/contact_icon_size"
                    android:src="@drawable/ic_email"
                    android:tint="?colorIcons"/>
                <TextView
                    android:id="@+id/email_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_link"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layoutDirection="ltr"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="@dimen/contact_icon_size"
                    android:layout_height="@dimen/contact_icon_size"
                    android:src="@drawable/ic_github"
                    android:tint="?colorIcons"/>
                <TextView
                    android:id="@+id/github_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_link"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>